--- a/app-assets/styles.css
+++ b/app-assets/styles.css
@@ -1,42 +1,48 @@
 @font-face {
   font-family: "Abeatbykai";
-  src: url("fonts/abeatbykai/abeatbyKaiRegular.otf");
+  src: url("../fonts/abeatbykai/abeatbyKaiRegular.otf");
 }
+
 /* Light */
 @font-face {
   font-family: "CreatoDisplay";
-  src: url("fonts/creato_display/CreatoDisplay-Light.otf");
+  src: url("../fonts/creato_display/CreatoDisplay-Light.otf");
   font-style: normal;
   font-weight: 100;
 }
+
 /* Normal */
 @font-face {
   font-family: "CreatoDisplay";
-  src: url("fonts/creato_display/CreatoDisplay-Regular.otf");
+  src: url("../fonts/creato_display/CreatoDisplay-Regular.otf");
   font-style: normal;
   font-weight: 400;
 }
+
 /* Medium */
 @font-face {
   font-family: "CreatoDisplay";
-  src: url("fonts/creato_display/CreatoDisplay-Medium.otf");
+  src: url("../fonts/creato_display/CreatoDisplay-Medium.otf");
   font-style: normal;
   font-weight: 500;
 }
+
 /* Bold */
 @font-face {
   font-family: "CreatoDisplay";
-  src: url("fonts/creato_display/CreatoDisplay-Bold.otf");
+  src: url("../fonts/creato_display/CreatoDisplay-Bold.otf");
   font-style: normal;
   font-weight: 700;
 }
+
 /* Extra Bold */
 @font-face {
   font-family: "CreatoDisplay";
-  src: url("fonts/creato_display/CreatoDisplay-ExtraBold.otf");
+  src: url("../fonts/creato_display/CreatoDisplay-ExtraBold.otf");
   font-style: normal;
   font-weight: 900;
 }
+
 html,
 body {
   font-family: "Abeatbykai", sans-serif;
@@ -148,6 +154,7 @@ body {
 .anchor-link {
   text-decoration: none;
 }
+
 .anchor-link:hover {
   opacity: 0.7;
 }
@@ -195,6 +202,7 @@ label {
 .hoverable {
   cursor: pointer;
 }
+
 .hoverable:hover {
   opacity: 0.7;
 }
@@ -205,9 +213,11 @@ label {
   font-weight: 500;
   font-size: 1rem;
 }
+
 .karya-btn:hover {
   opacity: 0.7;
 }
+
 .karya-btn:active {
   opacity: 0.6;
 }
@@ -229,14 +239,17 @@ label {
   flex-direction: column;
   align-items: center;
 }
+
 .info-card .circle-icon {
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
 .info-card h1 {
   text-align: center;
 }
+
 .info-card h6 {
   text-align: center;
 }
@@ -251,9 +264,80 @@ label {
   font-size: 0.8rem;
   font-weight: 500;
 }
+
 .karya-select:focus {
   box-shadow: none;
   border: 1px solid #8dcdcb !important;
+}
+
+.role-card {
+  background-color: #f0f0f0;
+  padding: 0.5rem;
+}
+
+.role-card h6 {
+  font-size: 0.75rem;
+  font-weight: 600;
+  margin-bottom: 0.25rem;
+}
+
+.role-card .role {
+  color: #7a858b;
+}
+
+.role-card .company {
+  color: #999a9a;
+  text-decoration: underline;
+}
+
+.role-card .location,
+.role-card .rm,
+.role-card .expire-dets {
+  color: #fa43a6;
+}
+
+.role-card .expire-dets {
+  margin-bottom: 1.5rem;
+  font-weight: 400;
+}
+
+.role-card .expire-dets .date {
+  font-weight: 600;
+}
+
+.role-card .summary-dets {
+  margin-top: 1.2rem;
+}
+
+.role-card .summary-dets .title {
+  color: #fa43a6;
+}
+
+.role-card .summary-dets .summary {
+  margin-bottom: 0.25rem;
+  color: #52513e;
+  font-size: 0.72rem;
+  font-weight: 500;
+}
+
+.role-card .card-btn {
+  background-color: #337ab7;
+  border: 0;
+  text-transform: uppercase;
+  font-size: 0.7rem;
+  font-weight: 500;
+  border-radius: 0;
+  color: #e5f7fd;
+}
+
+.role-card .card-btn:hover {
+  opacity: 0.7;
+}
+
+.role-card .card-btn:active {
+  opacity: 0.5;
+  color: #e5f7fd !important;
+  background-color: #337ab7 !important;
 }
 
 .mobile-only {
@@ -265,11 +349,15 @@ label {
     display: none;
   }
 }
+
 @media screen and (max-width: 576px) {
   .d-none-mobile {
     display: none;
   }
+
   .mobile-only {
     display: block;
   }
-}/*# sourceMappingURL=styles.css.map */
+}
+
+/*# sourceMappingURL=styles.css.map */
