new images and css design changed

--- a/app-assets/landing/style.scss
+++ b/app-assets/landing/style.scss
@@ -1,6 +1,5 @@
 // styles
 @import '../styles.scss';
-
 // nav
 @import '../nav.scss';
 
@@ -12,6 +11,7 @@
       }
     }
   }
+
   .carousel-indicators {
     button {
       background-color: #fff;
@@ -19,10 +19,12 @@
       width: 1rem;
       height: 1rem;
       border-radius: 100%;
+
       &:hover {
         opacity: 0.7;
       }
     }
+
     .active {
       background-color: $primary-color;
     }
@@ -36,19 +38,20 @@
         }
       }
     }
-    background: linear-gradient(
-        rgba(50, 201, 194, 0.9),
-        rgba(50, 201, 194, 0.9)
-      ),
-      url(../images/hero-image-01.jpg);
+
+    background: linear-gradient(rgba(50, 201, 194, 0.9),
+      rgba(50, 201, 194, 0.9)),
+    url(../images/hero-image-01.jpg);
     background-size: cover;
     background-position: top right;
     background-repeat: no-repeat;
     position: relative;
+
     .talent-card {
       background: linear-gradient(rgba(204, 24, 93), rgba(111, 13, 51));
     }
   }
+
   .carousel-hired {
     nav {
       ul {
@@ -57,20 +60,25 @@
         }
       }
     }
+
     background-color: $yellow-color;
     position: relative;
+
     .headers {
       top: auto;
       bottom: 0;
       transform: translate(-50%, 0%);
+
       h4 {
         color: #4aacaa;
       }
+
       img {
         width: 20rem;
         margin-left: 2.5rem;
       }
     }
+
     .hired-card {
       background: linear-gradient(rgba(47, 209, 209), rgba(10, 131, 128));
     }
@@ -81,20 +89,24 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+
     h1 {
       font-size: 4rem;
     }
+
     h4 {
       font-size: 2rem;
       width: 50%;
     }
   }
+
   .talent-card,
   .hired-card {
     position: absolute;
     top: 60%;
     right: 0;
     padding: 4rem 1.5rem;
+
     h6 {
       font-size: 1.2rem;
     }
@@ -105,23 +117,28 @@
   ::placeholder {
     /* Chrome, Firefox, Opera, Safari 10.1+ */
     color: #a6a6a6;
-    opacity: 1; /* Firefox */
+    opacity: 1;
+    /* Firefox */
     font-size: 0.8rem;
   }
+
   .hired-sub-section,
   .talent-sub-section {
     .content {
       position: absolute;
       bottom: 4rem;
+
       .title {
         font-size: 3rem;
         margin-bottom: 1.2rem;
       }
+
       .details {
         font-size: 1.2rem;
         font-weight: 600;
         margin-bottom: 5rem;
       }
+
       form {
         input {
           padding: 0;
@@ -132,17 +149,21 @@
           font-weight: 500;
           color: #7f7f7f;
           width: auto;
+
           &:focus {
             box-shadow: none;
             border-bottom: 2px solid #7f7f7f;
           }
         }
+
         .submit-btn {
           border: 1px solid $primary-color !important;
+
           &:hover {
             border: 1px solid $primary-color !important;
             background-color: $primary-color;
           }
+
           &:active {
             border: 1px solid $primary-color !important;
             background-color: $primary-color !important;
@@ -157,25 +178,32 @@
       display: flex;
       flex-direction: column;
       align-items: end;
+
       .title {
         text-align: right;
       }
+
       .details {
         color: #4aacaa;
         text-align: right;
       }
+
       form {
         text-align: right;
+
         input {
           text-align: right;
           border-bottom: 2px solid #545558;
         }
+
         .submit-btn {
           border: 1px solid $secondary-color !important;
+
           &:hover {
             border: 1px solid $secondary-color !important;
             background-color: $secondary-color;
           }
+
           &:active {
             border: 1px solid $secondary-color !important;
             background-color: $secondary-color !important;
@@ -191,16 +219,20 @@
     padding-left: 4rem;
     padding-right: 2rem;
   }
+
   .about-sub-section {
     padding-left: 2rem;
     padding-right: 4rem;
   }
+
   h6 {
     font-size: 1.5rem;
   }
+
   .points {
     font-size: 1.3rem;
   }
+
   ul {
     font-size: 1.2rem;
     list-style: none;
@@ -219,30 +251,37 @@
 }
 
 .what-section {
+
   .what-sub-section,
   .video-sub-section {
     display: flex;
     flex-direction: column;
     justify-content: center;
   }
+
   .what-sub-section {
     padding-left: 4rem;
     padding-right: 2rem;
+
     h1 {
       font-size: 3.5rem;
     }
+
     h6 {
       color: #4aacaa;
       font-size: 1.6rem;
     }
   }
+
   .video-sub-section {
     padding-right: 4rem;
     padding-left: 2rem;
+
     video {
       border: 0.5rem solid $primary-color;
       border-radius: 0.4rem;
     }
+
     // video::-webkit-media-controls-panel {
     //   display: none !important;
     //   opacity: 1 !important;
@@ -256,42 +295,50 @@
     max-height: 100%;
     overflow: auto;
   }
+
   .section-title {
     font-size: 4rem;
   }
+
   .info-card {
     .circle-icon {
       background-color: white;
       width: 4rem;
       height: 4rem;
       border-radius: 100%;
+
       .minus-icon {
         height: 0.4rem;
         width: 50%;
         background-color: #1b3c3e;
       }
     }
+
     h1 {
       font-size: 2rem;
       margin: 2rem 0;
       color: #4aacaa;
     }
+
     h6 {
       font-size: 1.2rem;
       font-weight: 600;
       color: #1b3c3e;
     }
   }
+
   .discover-card,
   .understanding-card {
     padding-left: 4rem;
     padding-right: 2rem;
   }
+
   .guided-card,
   .talent-card {
     padding-left: 2rem;
     padding-right: 2rem;
   }
+
   .connect-card,
   .save-card {
     padding-left: 2rem;
@@ -305,6 +352,7 @@
     max-height: 100%;
     overflow: auto;
   }
+
   .stepper-card {
     .step {
       h1 {
@@ -314,6 +362,7 @@
         padding-right: 2rem;
       }
     }
+
     .details {
       .title {
         color: #419997;
@@ -321,6 +370,7 @@
         font-weight: 600;
         margin-bottom: 0.7rem;
       }
+
       .about {
         color: #4b7779;
         font-size: 1.1rem;
@@ -328,21 +378,25 @@
       }
     }
   }
+
   .strengths-card,
   .onboard-card {
     padding-left: 4rem;
     padding-right: 2rem;
   }
+
   .showcase-card,
   .discover-card {
     padding-left: 2rem;
     padding-right: 2rem;
   }
+
   .explore-card,
   .discover-card2 {
     padding-left: 2rem;
     padding-right: 4rem;
   }
+
   .higlighted-line {
     h6 {
       text-align: center;
@@ -357,9 +411,11 @@
     .circle-icon {
       background-color: $secondary-color;
     }
+
     h1 {
       color: #d3175a;
     }
+
     h6 {
       color: white;
     }
@@ -373,10 +429,12 @@
         color: $primary-color;
       }
     }
+
     .details {
       .title {
         color: #f14582;
       }
+
       .about {
         color: #4b7779;
       }
@@ -387,31 +445,39 @@
 .contact-section {
   max-height: 100%;
   overflow: auto;
+
   .contact-message {
     padding-left: 4rem;
     padding-right: 2rem;
+
     .title {
       font-size: 2.2rem;
       font-weight: 600;
     }
+
     .message {
       font-size: 1.2rem;
       font-weight: 600;
     }
   }
+
   .contact-form {
     padding-left: 2rem;
     padding-right: 4rem;
+
     ::placeholder {
       /* Chrome, Firefox, Opera, Safari 10.1+ */
       color: #cdd7d6;
-      opacity: 1; /* Firefox */
+      opacity: 1;
+      /* Firefox */
       font-size: 0.8rem;
     }
+
     form {
       label {
         font-size: 0.9rem;
       }
+
       input {
         padding: 0;
         border-radius: 0;
@@ -420,18 +486,21 @@
         border-bottom: 2px solid #9cb4b4;
         font-weight: 500;
         color: #fff;
+
         // width: auto;
         &:focus {
           box-shadow: none;
           border-bottom: 2px solid #7f7f7f;
         }
       }
+
       .privacy-check {
         label {
           cursor: pointer;
           font-size: 0.8rem;
         }
       }
+
       #terms-check {
         cursor: pointer;
         border: 2px solid $yellow-color;
@@ -439,13 +508,16 @@
         border-radius: 4px;
         height: 1rem;
       }
+
       .submit-btn {
         font-size: 0.9rem;
         border: 1px solid $yellow-color !important;
+
         &:hover {
           border: 1px solid $yellow-color !important;
           background-color: $yellow-color;
         }
+
         &:active {
           border: 1px solid $yellow-color !important;
           background-color: $yellow-color !important;
@@ -453,24 +525,31 @@
       }
     }
   }
+
   .links-address {
     padding-top: 2rem;
     padding-bottom: 2rem;
+
     .logo {
       width: 10rem;
     }
+
     .abt-karya {
       font-size: 0.9rem;
     }
+
     ul {
       list-style: none;
     }
+
     .anchor-link {
       font-size: 0.8rem;
+
       &:hover {
         color: $lite-white;
       }
     }
+
     .contact {
       p {
         font-size: 0.8rem;
@@ -485,6 +564,7 @@
       h1 {
         font-size: 3.5rem;
       }
+
       h4 {
         font-size: 1.5rem;
       }
@@ -501,6 +581,7 @@
     .talent-card,
     .hired-card {
       padding: 3.5rem 1rem;
+
       h6 {
         font-size: 1rem;
       }
@@ -511,16 +592,20 @@
     .what-sub-section {
       padding-left: 4rem;
       padding-right: 2rem;
+
       h1 {
         font-size: 3rem;
       }
+
       h6 {
         font-size: 1.4rem;
       }
     }
+
     .video-sub-section {
       padding-right: 4rem;
       padding-left: 2rem;
+
       video {
         border: 0.5rem solid $primary-color;
         border-radius: 0.4rem;
@@ -533,17 +618,21 @@
     .section-title {
       font-size: 3.2rem;
     }
+
     .info-card {
       .circle-icon {
         width: 3rem;
         height: 3rem;
+
         .minus-icon {
           height: 0.3rem;
         }
       }
+
       h1 {
         font-size: 1.7rem;
       }
+
       h6 {
         font-size: 1.1rem;
       }
@@ -558,15 +647,18 @@
           font-size: 6rem;
         }
       }
+
       .details {
         .title {
           font-size: 1.3rem;
         }
+
         .about {
           font-size: 1rem;
         }
       }
     }
+
     .higlighted-line {
       h6 {
         font-size: 1.3rem;
@@ -579,24 +671,29 @@
       .title {
         font-size: 2rem;
       }
+
       .message {
         font-size: 1.1rem;
       }
     }
+
     .contact-form {
       form {
         label {
           font-size: 0.8rem;
         }
+
         input {
           font-size: 0.9rem;
         }
+
         .privacy-check {
           label {
             cursor: pointer;
             font-size: 0.8rem;
           }
         }
+
         .submit-btn {
           font-size: 0.8rem;
         }
@@ -611,6 +708,7 @@
       h1 {
         font-size: 2.5rem;
       }
+
       h4 {
         font-size: 1.2rem;
       }
@@ -627,6 +725,7 @@
     .talent-card,
     .hired-card {
       padding: 3rem 1rem;
+
       h6 {
         font-size: 1rem;
       }
@@ -634,6 +733,7 @@
   }
 
   .hired-talent-form-section {
+
     .hired-sub-section,
     .talent-sub-section {
       .content {
@@ -644,12 +744,14 @@
           font-size: 2.5rem;
           margin-bottom: 1rem;
         }
+
         .details {
           font-size: 1rem;
           margin-bottom: 3rem;
         }
       }
     }
+
     .row {
       overflow: auto;
     }
@@ -659,19 +761,24 @@
     .row {
       overflow: auto;
     }
+
     .etymology-sub-section {
       padding-right: 4rem;
     }
+
     .about-sub-section {
       padding-top: 0;
       padding-left: 4rem;
     }
+
     h6 {
       font-size: 1.3rem;
     }
+
     .points {
       font-size: 1.1rem;
     }
+
     ul {
       font-size: 1rem;
     }
@@ -683,18 +790,23 @@
       height: auto !important;
       max-height: 100%;
     }
+
     .what-sub-section {
       padding: 4rem;
+
       h1 {
         font-size: 2.5rem;
       }
+
       h6 {
         font-size: 1.2rem;
       }
     }
+
     .video-sub-section {
       padding: 4rem;
       padding-top: 0;
+
       video {
         border: 0.4rem solid $primary-color;
         border-radius: 0.3rem;
@@ -707,21 +819,26 @@
     .section-title {
       font-size: 2.8rem;
     }
+
     .info-card {
       margin-bottom: 2rem;
       padding-left: 4rem;
       padding-right: 4rem;
+
       .circle-icon {
         width: 2.8rem;
         height: 2.8rem;
+
         .minus-icon {
           height: 0.3rem;
         }
       }
+
       h1 {
         margin: 1rem 0;
         font-size: 1.5rem;
       }
+
       h6 {
         font-size: 1rem;
       }
@@ -734,6 +851,7 @@
       padding-top: 2rem;
       padding-bottom: 2rem;
     }
+
     .stepper-card {
       .step {
         h1 {
@@ -741,15 +859,18 @@
           padding-right: 1.5rem;
         }
       }
+
       .details {
         .title {
           font-size: 1.1rem;
         }
+
         .about {
           font-size: 1rem;
         }
       }
     }
+
     .strengths-card,
     .showcase-card,
     .explore-card,
@@ -759,6 +880,7 @@
       padding-left: 4rem;
       padding-right: 4rem;
     }
+
     .higlighted-line {
       h6 {
         font-size: 1.1rem;
@@ -770,13 +892,16 @@
     .contact-message {
       padding-right: 4rem;
       padding-bottom: 0rem;
+
       .title {
         font-size: 1.8rem;
       }
+
       .message {
         font-size: 1rem;
       }
     }
+
     .contact-form {
       padding-top: 2rem;
       padding-left: 4rem;
@@ -803,6 +928,7 @@
         font-size: 2rem;
         text-align: center;
       }
+
       h4 {
         width: 100%;
         font-size: 1rem;
@@ -815,6 +941,7 @@
         top: 50%;
         bottom: auto;
         transform: translate(-50%, -50%);
+
         img {
           display: none;
         }
@@ -824,6 +951,7 @@
     .talent-card,
     .hired-card {
       padding: 2rem 0.8rem;
+
       h6 {
         font-size: 0.8rem;
       }
@@ -831,6 +959,7 @@
   }
 
   .hired-talent-form-section {
+
     .hired-sub-section,
     .talent-sub-section {
       .content {
@@ -843,13 +972,16 @@
           width: 100%;
           text-align: center;
         }
+
         .details {
           font-size: 1rem;
           margin-bottom: 2rem;
           text-align: left;
         }
+
         form {
           text-align: left;
+
           input {
             text-align: left;
           }
@@ -862,16 +994,20 @@
     .row {
       overflow: auto;
     }
+
     .etymology-sub-section,
     .about-sub-section {
       padding: 1rem;
     }
+
     h6 {
       font-size: 1rem;
     }
+
     .points {
       font-size: 0.9rem;
     }
+
     ul {
       font-size: 0.8rem;
     }
@@ -880,14 +1016,17 @@
   .what-section {
     .what-sub-section {
       padding: 1rem;
+
       h1 {
         font-size: 2rem;
       }
+
       h6 {
         color: #4aacaa;
         font-size: 1rem;
       }
     }
+
     .video-sub-section {
       padding: 1rem;
     }
@@ -898,28 +1037,35 @@
     .karya-p {
       padding: 1rem;
     }
+
     .section-title {
       font-size: 1.8rem;
     }
+
     .info-card {
       margin-bottom: 2rem;
+
       .circle-icon {
         background-color: white;
         width: 2rem;
         height: 2rem;
+
         .minus-icon {
           height: 0.25rem;
         }
       }
+
       h1 {
         font-size: 1.5rem;
         margin: 0.5rem 0;
       }
+
       h6 {
         font-size: 1rem;
         font-weight: 500;
       }
     }
+
     .discover-card,
     .guided-card,
     .connect-card,
@@ -934,10 +1080,12 @@
   .job-steps-section,
   .employer-steps-section {
     align-items: stretch !important;
+
     .karya-py {
       padding-top: 1rem;
       padding-bottom: 1rem;
     }
+
     .stepper-card {
       .step {
         h1 {
@@ -945,16 +1093,19 @@
           padding-right: 1rem;
         }
       }
+
       .details {
         .title {
           font-size: 1rem;
           margin-bottom: 0.5rem;
         }
+
         .about {
           font-size: 0.8rem;
         }
       }
     }
+
     .strengths-card,
     .showcase-card,
     .explore-card,
@@ -964,8 +1115,10 @@
       padding-left: 1rem;
       padding-right: 1rem;
     }
+
     .higlighted-line {
       padding: 2rem 1rem;
+
       h6 {
         font-size: 1.1rem;
       }
@@ -976,54 +1129,68 @@
     .contact-message {
       padding: 1rem;
       padding-bottom: 0;
+
       .title {
         font-size: 1.5rem;
       }
+
       .message {
         font-size: 0.9rem;
       }
     }
+
     .contact-form {
       padding: 1rem;
+
       form {
         label {
           font-size: 0.7rem;
         }
+
         input {
           font-size: 0.8;
         }
+
         .privacy-check {
           label {
             cursor: pointer;
             font-size: 0.8rem;
           }
         }
+
         .submit-btn {
           font-size: 0.7rem;
         }
       }
     }
+
     .links-address {
       padding: 1rem;
+
       .logo {
         width: 8rem;
       }
+
       .abt-karya {
         margin-bottom: 1.2rem;
+
         .msg-txt {
           font-size: 0.8rem;
           margin-bottom: 0.2rem;
         }
       }
+
       .anchor-link {
         font-size: 0.7rem;
       }
+
       .contact {
         p {
           font-size: 0.7rem;
         }
       }
     }
+
     .links,
     .contact {
       h6 {
@@ -1034,6 +1201,7 @@
 }
 
 @media screen and (max-width: 280px) {
+
   .talent-card,
   .hired-card {
     display: none;
