--- a/app-assets/nav.css
+++ b/app-assets/nav.css
@@ -2,6 +2,7 @@
   font-family: "Abeatbykai";
   src: url("fonts/abeatbykai/abeatbyKaiRegular.otf");
 }
+
 /* Light */
 @font-face {
   font-family: "CreatoDisplay";
@@ -9,6 +10,7 @@
   font-style: normal;
   font-weight: 100;
 }
+
 /* Normal */
 @font-face {
   font-family: "CreatoDisplay";
@@ -16,6 +18,7 @@
   font-style: normal;
   font-weight: 400;
 }
+
 /* Medium */
 @font-face {
   font-family: "CreatoDisplay";
@@ -23,6 +26,7 @@
   font-style: normal;
   font-weight: 500;
 }
+
 /* Bold */
 @font-face {
   font-family: "CreatoDisplay";
@@ -30,6 +34,7 @@
   font-style: normal;
   font-weight: 700;
 }
+
 /* Extra Bold */
 @font-face {
   font-family: "CreatoDisplay";
@@ -37,6 +42,7 @@
   font-style: normal;
   font-weight: 900;
 }
+
 html,
 body {
   font-family: "Abeatbykai", sans-serif;
@@ -74,6 +80,14 @@ body {
 
 .yellow-bg {
   background-color: #f4d552;
+}
+
+.lite-white {
+  color: #f2f2f2;
+}
+
+.black-clr {
+  color: #000000;
 }
 
 .fs-8 {
@@ -137,6 +151,18 @@ body {
   width: 100vw;
 }
 
+.anchor-link {
+  text-decoration: none;
+}
+
+.anchor-link:hover {
+  opacity: 0.7;
+}
+
+.list-style-none {
+  list-style: none;
+}
+
 ::-webkit-scrollbar {
   width: 0.3em;
   height: 0.3em;
@@ -176,6 +202,7 @@ label {
 .hoverable {
   cursor: pointer;
 }
+
 .hoverable:hover {
   opacity: 0.7;
 }
@@ -185,6 +212,14 @@ label {
   text-transform: uppercase;
   font-weight: 500;
   font-size: 1rem;
+}
+
+.karya-btn:hover {
+  opacity: 0.7;
+}
+
+.karya-btn:active {
+  opacity: 0.6;
 }
 
 .karya-container {
@@ -199,30 +234,162 @@ label {
   height: 100vh;
 }
 
+.info-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.info-card .circle-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.info-card h1 {
+  text-align: center;
+}
+
+.info-card h6 {
+  text-align: center;
+}
+
+.gx-5rem {
+  --bs-gutter-x: 5rem;
+}
+
+.karya-select {
+  border: 1px solid #8dcdcb;
+  color: #263650;
+  font-size: 0.8rem;
+  font-weight: 500;
+}
+
+.karya-select:focus {
+  box-shadow: none;
+  border: 1px solid #8dcdcb !important;
+}
+
+.role-card {
+  background-color: #f0f0f0;
+  padding: 0.5rem;
+}
+
+.role-card h6 {
+  font-size: 0.75rem;
+  font-weight: 600;
+  margin-bottom: 0.25rem;
+}
+
+.role-card .role {
+  color: #7a858b;
+}
+
+.role-card .company {
+  color: #999a9a;
+  text-decoration: underline;
+}
+
+.role-card .location,
+.role-card .rm,
+.role-card .expire-dets {
+  color: #fa43a6;
+}
+
+.role-card .expire-dets {
+  margin-bottom: 1.5rem;
+  font-weight: 400;
+}
+
+.role-card .expire-dets .date {
+  font-weight: 600;
+}
+
+.role-card .summary-dets {
+  margin-top: 1.2rem;
+}
+
+.role-card .summary-dets .title {
+  color: #fa43a6;
+}
+
+.role-card .summary-dets .summary {
+  margin-bottom: 0.25rem;
+  color: #52513e;
+  font-size: 0.72rem;
+  font-weight: 500;
+}
+
+.role-card .card-btn {
+  background-color: #337ab7;
+  border: 0;
+  text-transform: uppercase;
+  font-size: 0.7rem;
+  font-weight: 500;
+  border-radius: 0;
+  color: #e5f7fd;
+}
+
+.role-card .card-btn:hover {
+  opacity: 0.7;
+}
+
+.role-card .card-btn:active {
+  opacity: 0.5;
+  color: #e5f7fd !important;
+  background-color: #337ab7 !important;
+}
+
+.mobile-only {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  .d-none-tab {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .d-none-mobile {
+    display: none;
+  }
+
+  .mobile-only {
+    display: block;
+  }
+}
+
 nav {
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
+
 nav .brand {
   width: 10rem;
 }
+
 nav ul {
   display: flex;
   list-style: none;
 }
+
 nav ul a {
   text-decoration: none;
   font-weight: 600;
   font-size: 1.2rem;
 }
+
 nav ul a:hover {
   opacity: 0.7;
 }
+
 nav .menu-icon {
   display: none;
   color: #263650;
   cursor: pointer;
 }
+
 nav .menu-icon:hover {
   opacity: 0.7;
 }
@@ -232,19 +399,23 @@ nav .menu-icon:hover {
   width: 15rem;
   background: linear-gradient(rgb(50, 201, 194), rgb(50, 201, 194));
 }
+
 #offcanvasMenu ul {
   display: flex;
   flex-direction: column;
   list-style: none;
 }
+
 #offcanvasMenu ul li {
   margin-bottom: 1.5rem;
 }
+
 #offcanvasMenu ul a {
   text-decoration: none;
   font-weight: 600;
   font-size: 1.2rem;
 }
+
 #offcanvasMenu ul a:hover {
   opacity: 0.7;
 }
@@ -254,32 +425,42 @@ nav .menu-icon:hover {
 }
 
 @media screen and (max-width: 768px) {
+
   #offcanvasMenu,
   .offcanvas-backdrop {
     display: block;
   }
+
   nav .brand {
     width: 9rem;
   }
+
   nav ul {
     display: none !important;
   }
+
   nav .menu-icon {
     display: block;
   }
 }
+
 @media screen and (max-width: 576px) {
   nav {
     padding-top: 1rem;
     padding-bottom: 1rem;
   }
+
   #offcanvasMenu {
     width: 10rem;
   }
+
   #offcanvasMenu ul li {
     margin-bottom: 1rem;
   }
+
   #offcanvasMenu ul a {
     font-size: 0.8rem;
   }
-}/*# sourceMappingURL=nav.css.map */
+}
+
+/*# sourceMappingURL=nav.css.map */
