--- a/app-assets/pricing/style.css
+++ b/app-assets/pricing/style.css
@@ -2,6 +2,7 @@
   font-family: "Abeatbykai";
   src: url("../fonts/abeatbykai/abeatbyKaiRegular.otf");
 }
+
 /* Light */
 @font-face {
   font-family: "CreatoDisplay";
@@ -9,6 +10,7 @@
   font-style: normal;
   font-weight: 100;
 }
+
 /* Normal */
 @font-face {
   font-family: "CreatoDisplay";
@@ -16,6 +18,7 @@
   font-style: normal;
   font-weight: 400;
 }
+
 /* Medium */
 @font-face {
   font-family: "CreatoDisplay";
@@ -23,6 +26,7 @@
   font-style: normal;
   font-weight: 500;
 }
+
 /* Bold */
 @font-face {
   font-family: "CreatoDisplay";
@@ -30,6 +34,7 @@
   font-style: normal;
   font-weight: 700;
 }
+
 /* Extra Bold */
 @font-face {
   font-family: "CreatoDisplay";
@@ -37,6 +42,7 @@
   font-style: normal;
   font-weight: 900;
 }
+
 html,
 body {
   font-family: "Abeatbykai", sans-serif;
@@ -148,8 +154,13 @@ body {
 .anchor-link {
   text-decoration: none;
 }
+
 .anchor-link:hover {
   opacity: 0.7;
+}
+
+.list-style-none {
+  list-style: none;
 }
 
 ::-webkit-scrollbar {
@@ -191,6 +202,7 @@ label {
 .hoverable {
   cursor: pointer;
 }
+
 .hoverable:hover {
   opacity: 0.7;
 }
@@ -201,9 +213,11 @@ label {
   font-weight: 500;
   font-size: 1rem;
 }
+
 .karya-btn:hover {
   opacity: 0.7;
 }
+
 .karya-btn:active {
   opacity: 0.6;
 }
@@ -225,16 +239,109 @@ label {
   flex-direction: column;
   align-items: center;
 }
+
 .info-card .circle-icon {
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
 .info-card h1 {
   text-align: center;
 }
+
 .info-card h6 {
   text-align: center;
+}
+
+.gx-5rem {
+  --bs-gutter-x: 5rem;
+}
+
+.karya-select {
+  border: 1px solid #8dcdcb;
+  color: #263650;
+  font-size: 0.8rem;
+  font-weight: 500;
+}
+
+.karya-select:focus {
+  box-shadow: none;
+  border: 1px solid #8dcdcb !important;
+}
+
+.role-card {
+  background-color: #f0f0f0;
+  padding: 0.5rem;
+}
+
+.role-card h6 {
+  font-size: 0.75rem;
+  font-weight: 600;
+  margin-bottom: 0.25rem;
+}
+
+.role-card .role {
+  color: #7a858b;
+}
+
+.role-card .company {
+  color: #999a9a;
+  text-decoration: underline;
+}
+
+.role-card .location,
+.role-card .rm,
+.role-card .expire-dets {
+  color: #fa43a6;
+}
+
+.role-card .expire-dets {
+  margin-bottom: 1.5rem;
+  font-weight: 400;
+}
+
+.role-card .expire-dets .date {
+  font-weight: 600;
+}
+
+.role-card .summary-dets {
+  margin-top: 1.2rem;
+}
+
+.role-card .summary-dets .title {
+  color: #fa43a6;
+}
+
+.role-card .summary-dets .summary {
+  margin-bottom: 0.25rem;
+  color: #52513e;
+  font-size: 0.72rem;
+  font-weight: 500;
+}
+
+.role-card .card-btn {
+  background-color: #337ab7;
+  border: 0;
+  text-transform: uppercase;
+  font-size: 0.7rem;
+  font-weight: 500;
+  border-radius: 0;
+  color: #e5f7fd;
+}
+
+.role-card .card-btn:hover {
+  opacity: 0.7;
+}
+
+.role-card .card-btn:active {
+  opacity: 0.5;
+  color: #e5f7fd !important;
+  background-color: #337ab7 !important;
+}
+
+.mobile-only {
+  display: none;
 }
 
 @media screen and (max-width: 768px) {
@@ -242,15 +349,22 @@ label {
     display: none;
   }
 }
+
 @media screen and (max-width: 576px) {
   .d-none-mobile {
     display: none;
   }
+
+  .mobile-only {
+    display: block;
+  }
 }
+
 @font-face {
   font-family: "Abeatbykai";
   src: url("../fonts/abeatbykai/abeatbyKaiRegular.otf");
 }
+
 /* Light */
 @font-face {
   font-family: "CreatoDisplay";
@@ -258,6 +372,7 @@ label {
   font-style: normal;
   font-weight: 100;
 }
+
 /* Normal */
 @font-face {
   font-family: "CreatoDisplay";
@@ -265,6 +380,7 @@ label {
   font-style: normal;
   font-weight: 400;
 }
+
 /* Medium */
 @font-face {
   font-family: "CreatoDisplay";
@@ -272,6 +388,7 @@ label {
   font-style: normal;
   font-weight: 500;
 }
+
 /* Bold */
 @font-face {
   font-family: "CreatoDisplay";
@@ -279,6 +396,7 @@ label {
   font-style: normal;
   font-weight: 700;
 }
+
 /* Extra Bold */
 @font-face {
   font-family: "CreatoDisplay";
@@ -286,6 +404,7 @@ label {
   font-style: normal;
   font-weight: 900;
 }
+
 html,
 body {
   font-family: "Abeatbykai", sans-serif;
@@ -397,8 +516,13 @@ body {
 .anchor-link {
   text-decoration: none;
 }
+
 .anchor-link:hover {
   opacity: 0.7;
+}
+
+.list-style-none {
+  list-style: none;
 }
 
 ::-webkit-scrollbar {
@@ -440,6 +564,7 @@ label {
 .hoverable {
   cursor: pointer;
 }
+
 .hoverable:hover {
   opacity: 0.7;
 }
@@ -450,9 +575,11 @@ label {
   font-weight: 500;
   font-size: 1rem;
 }
+
 .karya-btn:hover {
   opacity: 0.7;
 }
+
 .karya-btn:active {
   opacity: 0.6;
 }
@@ -474,16 +601,109 @@ label {
   flex-direction: column;
   align-items: center;
 }
+
 .info-card .circle-icon {
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
 .info-card h1 {
   text-align: center;
 }
+
 .info-card h6 {
   text-align: center;
+}
+
+.gx-5rem {
+  --bs-gutter-x: 5rem;
+}
+
+.karya-select {
+  border: 1px solid #8dcdcb;
+  color: #263650;
+  font-size: 0.8rem;
+  font-weight: 500;
+}
+
+.karya-select:focus {
+  box-shadow: none;
+  border: 1px solid #8dcdcb !important;
+}
+
+.role-card {
+  background-color: #f0f0f0;
+  padding: 0.5rem;
+}
+
+.role-card h6 {
+  font-size: 0.75rem;
+  font-weight: 600;
+  margin-bottom: 0.25rem;
+}
+
+.role-card .role {
+  color: #7a858b;
+}
+
+.role-card .company {
+  color: #999a9a;
+  text-decoration: underline;
+}
+
+.role-card .location,
+.role-card .rm,
+.role-card .expire-dets {
+  color: #fa43a6;
+}
+
+.role-card .expire-dets {
+  margin-bottom: 1.5rem;
+  font-weight: 400;
+}
+
+.role-card .expire-dets .date {
+  font-weight: 600;
+}
+
+.role-card .summary-dets {
+  margin-top: 1.2rem;
+}
+
+.role-card .summary-dets .title {
+  color: #fa43a6;
+}
+
+.role-card .summary-dets .summary {
+  margin-bottom: 0.25rem;
+  color: #52513e;
+  font-size: 0.72rem;
+  font-weight: 500;
+}
+
+.role-card .card-btn {
+  background-color: #337ab7;
+  border: 0;
+  text-transform: uppercase;
+  font-size: 0.7rem;
+  font-weight: 500;
+  border-radius: 0;
+  color: #e5f7fd;
+}
+
+.role-card .card-btn:hover {
+  opacity: 0.7;
+}
+
+.role-card .card-btn:active {
+  opacity: 0.5;
+  color: #e5f7fd !important;
+  background-color: #337ab7 !important;
+}
+
+.mobile-only {
+  display: none;
 }
 
 @media screen and (max-width: 768px) {
@@ -491,35 +711,47 @@ label {
     display: none;
   }
 }
+
 @media screen and (max-width: 576px) {
   .d-none-mobile {
     display: none;
   }
+
+  .mobile-only {
+    display: block;
+  }
 }
+
 nav {
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
+
 nav .brand {
   width: 10rem;
 }
+
 nav ul {
   display: flex;
   list-style: none;
 }
+
 nav ul a {
   text-decoration: none;
   font-weight: 600;
   font-size: 1.2rem;
 }
+
 nav ul a:hover {
   opacity: 0.7;
 }
+
 nav .menu-icon {
   display: none;
   color: #263650;
   cursor: pointer;
 }
+
 nav .menu-icon:hover {
   opacity: 0.7;
 }
@@ -529,19 +761,23 @@ nav .menu-icon:hover {
   width: 15rem;
   background: linear-gradient(rgb(50, 201, 194), rgb(50, 201, 194));
 }
+
 #offcanvasMenu ul {
   display: flex;
   flex-direction: column;
   list-style: none;
 }
+
 #offcanvasMenu ul li {
   margin-bottom: 1.5rem;
 }
+
 #offcanvasMenu ul a {
   text-decoration: none;
   font-weight: 600;
   font-size: 1.2rem;
 }
+
 #offcanvasMenu ul a:hover {
   opacity: 0.7;
 }
@@ -551,47 +787,59 @@ nav .menu-icon:hover {
 }
 
 @media screen and (max-width: 768px) {
+
   #offcanvasMenu,
   .offcanvas-backdrop {
     display: block;
   }
+
   nav .brand {
     width: 9rem;
   }
+
   nav ul {
     display: none !important;
   }
+
   nav .menu-icon {
     display: block;
   }
 }
+
 @media screen and (max-width: 576px) {
   nav {
     padding-top: 1rem;
     padding-bottom: 1rem;
   }
+
   #offcanvasMenu {
     width: 10rem;
   }
+
   #offcanvasMenu ul li {
     margin-bottom: 1rem;
   }
+
   #offcanvasMenu ul a {
     font-size: 0.8rem;
   }
 }
+
 .maths-section {
   background: linear-gradient(to bottom, #fff 0%, #fff 65%, #8ccecb 65%, #8ccecb 100%);
   height: 100%;
   overflow: auto;
 }
+
 .maths-section .section-info .title {
   font-size: 4rem;
 }
+
 .maths-section .section-info .helper-txt {
   font-size: 1.4rem;
   color: #3c8c8a;
 }
+
 .maths-section .income-calc .slidecontainer {
   display: flex;
   flex-direction: column;
@@ -600,10 +848,12 @@ nav .menu-icon:hover {
   /* All the same stuff for Firefox */
   /* All the same stuff for IE */
 }
+
 .maths-section .income-calc .slidecontainer input {
   margin: 2rem 0;
   width: 18rem;
 }
+
 .maths-section .income-calc .slidecontainer input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
   height: 100%;
@@ -614,18 +864,21 @@ nav .menu-icon:hover {
   border-color: #fff;
   cursor: pointer;
 }
+
 .maths-section .income-calc .slidecontainer input[type=range]::-webkit-slider-thumb:active {
   background: #ffffff !important;
   box-shadow: none !important;
   border-color: #fff !important;
   outline: none !important;
 }
+
 .maths-section .income-calc .slidecontainer input[type=range]::-webkit-slider-thumb:focus {
   background: #ffffff !important;
   box-shadow: none !important;
   border-color: #fff !important;
   outline: none !important;
 }
+
 .maths-section .income-calc .slidecontainer input[type=range]::-moz-range-thumb {
   height: 100%;
   width: 3rem;
@@ -635,6 +888,7 @@ nav .menu-icon:hover {
   border-color: #fff;
   cursor: pointer;
 }
+
 .maths-section .income-calc .slidecontainer input[type=range]::-ms-thumb {
   height: 100%;
   width: 3rem;
@@ -644,52 +898,63 @@ nav .menu-icon:hover {
   border-color: #fff;
   cursor: pointer;
 }
+
 .maths-section .income-calc input[type=range]::-webkit-slider-runnable-track {
   height: 3rem;
   cursor: pointer;
   background-color: #263650;
   border-radius: 5rem;
 }
+
 .maths-section .income-calc input[type=range]:focus::-webkit-slider-runnable-track {
   background-color: #263650;
 }
+
 .maths-section .income-calc input[type=range]::-moz-range-track {
   height: 4rem;
   cursor: pointer;
   background-color: #263650;
   border-radius: 5rem;
 }
+
 .maths-section .income-calc input[type=range]::-ms-track {
   height: 4rem;
   cursor: pointer;
   background-color: #263650;
   border-radius: 5rem;
 }
+
 .maths-section .income-calc input[type=range]::-ms-fill-lower {
   height: 4rem;
   cursor: pointer;
   background-color: #263650;
   border-radius: 5rem;
 }
+
 .maths-section .income-calc input[type=range]:focus::-ms-fill-lower {
   background-color: #263650;
 }
+
 .maths-section .income-calc input[type=range]::-ms-fill-upper {
   height: 4rem;
   cursor: pointer;
   background-color: #263650;
   border-radius: 5rem;
 }
+
 .maths-section .income-calc input[type=range]:focus::-ms-fill-upper {
   background-color: #263650;
 }
+
 .maths-section .income-calc .ranges .selected-value {
   position: relative;
   top: -1rem;
 }
+
 .maths-section .income-calc .result .profiles-result {
   margin-right: 2rem;
 }
+
 .maths-section .income-calc .result .profiles-result h3 {
   background-color: #6abebc;
   display: flex;
@@ -700,15 +965,19 @@ nav .menu-icon:hover {
   height: 8rem;
   border-radius: 100%;
 }
+
 .maths-section .income-calc .result .profiles-result h3 .value {
   font-size: 2rem;
 }
+
 .maths-section .income-calc .result .profiles-result h3 .label {
   font-size: 1rem;
 }
+
 .maths-section .income-calc .result .income-result {
   margin-top: 5rem;
 }
+
 .maths-section .income-calc .result .income-result h3 {
   background-color: #263650;
   display: flex;
@@ -719,9 +988,11 @@ nav .menu-icon:hover {
   height: 12rem;
   border-radius: 100%;
 }
+
 .maths-section .income-calc .result .income-result h3 .value {
   font-size: 2rem;
 }
+
 .maths-section .income-calc .result .income-result h3 .label {
   font-size: 1rem;
 }
@@ -730,65 +1001,82 @@ nav .menu-icon:hover {
   max-height: 100%;
   overflow: auto;
 }
+
 .outcomes-section .section-info .title {
   font-size: 4rem;
 }
+
 .outcomes-section .section-info .helper-txt {
   font-size: 1.4rem;
 }
+
 .outcomes-section .explore-card {
   padding-left: 4rem;
   padding-right: 2rem;
 }
+
 .outcomes-section .explore-card .outcomeCard {
   background-color: #cfebe5;
 }
+
 .outcomes-section .business-card {
   padding-left: 2rem;
   padding-right: 2rem;
 }
+
 .outcomes-section .business-card .outcomeCard {
   background-color: #acdcd3;
 }
+
 .outcomes-section .corporate-card {
   padding-left: 2rem;
   padding-right: 4rem;
 }
+
 .outcomes-section .corporate-card .outcomeCard {
   background-color: #90cabf;
 }
+
 .outcomes-section .outcomeCard {
   padding: 2rem;
   border-radius: 1.5rem;
 }
+
 .outcomes-section .outcomeCard .header-data {
   margin-bottom: 1.5rem;
 }
+
 .outcomes-section .outcomeCard .header-data .title {
   font-size: 1.5rem;
   color: #cf174c;
 }
+
 .outcomes-section .outcomeCard .header-data .plan {
   font-size: 2.5rem;
   color: #1c4554;
 }
+
 .outcomes-section .outcomeCard .header-data .plan-text {
   font-size: 1.1rem;
   color: #29384f;
 }
+
 .outcomes-section .outcomeCard .card-body .outcome-list {
   list-style: none;
 }
+
 .outcomes-section .outcomeCard .card-body .outcome-list li {
   color: #2e3d53;
   display: flex;
   margin-bottom: 0.5rem;
 }
+
 .outcomes-section .outcomeCard .card-body .outcome-list li .fa-check-circle {
   color: #15807e;
   font-size: 1.4rem;
   margin-right: 0.4rem;
 }
+
 .outcomes-section .outcomeCard .card-body .outcome-list li .outcome-type {
   font-size: 1rem;
   font-weight: 600;
@@ -798,186 +1086,235 @@ nav .menu-icon:hover {
   .maths-section .section-info .title {
     font-size: 3.2rem;
   }
+
   .maths-section .section-info .helper-txt {
     font-size: 1.2rem;
   }
+
   .outcomes-section .section-info .title {
     font-size: 3.2rem;
   }
+
   .outcomes-section .section-info .helper-txt {
     font-size: 1.2rem;
   }
+
   .outcomes-section .business-card {
     padding-right: 4rem;
   }
+
   .outcomes-section .corporate-card {
     padding-top: 0;
     padding-left: 4rem;
     padding-right: 2rem;
   }
 }
+
 @media screen and (max-width: 768px) {
   .maths-section .section-info .title {
     font-size: 2.8rem;
   }
+
   .maths-section .section-info .helper-txt {
     font-size: 1rem;
   }
+
   .maths-section .income-calc {
     flex-direction: column;
   }
+
   .maths-section .income-calc .result {
     align-items: center;
   }
+
   .maths-section .income-calc .result .profiles-result h3 {
     width: 6rem;
     height: 6rem;
   }
+
   .maths-section .income-calc .result .profiles-result h3 .value {
     font-size: 1.5rem;
   }
+
   .maths-section .income-calc .result .profiles-result h3 .label {
     font-size: 0.8rem;
   }
+
   .maths-section .income-calc .result .income-result {
     margin-top: 0;
   }
+
   .maths-section .income-calc .result .income-result h3 {
     width: 9rem;
     height: 9rem;
   }
+
   .maths-section .income-calc .result .income-result h3 .value {
     font-size: 1.5rem;
   }
+
   .maths-section .income-calc .result .income-result h3 .label {
     font-size: 0.8rem;
   }
+
   .outcomes-section .section-info .title {
     font-size: 2.8rem;
   }
+
   .outcomes-section .section-info .helper-txt {
     font-size: 1rem;
   }
+
   .outcomes-section .explore-card {
     padding-right: 4rem;
   }
+
   .outcomes-section .business-card {
     padding-top: 0;
     padding-left: 4rem;
   }
+
   .outcomes-section .corporate-card {
     padding-right: 4rem;
   }
 }
+
 @media screen and (max-width: 576px) {
   .maths-section {
     background: #fff;
   }
+
   .maths-section .section-info {
     padding: 1rem;
   }
+
   .maths-section .section-info .title {
     font-size: 1.8rem;
   }
+
   .maths-section .section-info .helper-txt {
     font-size: 0.8rem;
   }
+
   .maths-section .income-calc {
     padding: 1rem !important;
     flex-direction: column-reverse;
   }
+
   .maths-section .income-calc input[type=range]::-webkit-slider-thumb {
     width: 2rem !important;
   }
+
   .maths-section .income-calc input[type=range]::-webkit-slider-runnable-track {
     height: 2rem;
     cursor: pointer;
     background-color: #263650;
     border-radius: 5rem;
   }
+
   .maths-section .income-calc .slidecontainer label,
   .maths-section .income-calc .slidecontainer .ranges {
     font-size: 0.8rem;
   }
+
   .maths-section .income-calc .slidecontainer label .selected-value,
   .maths-section .income-calc .slidecontainer .ranges .selected-value {
     top: -0.3rem;
   }
+
   .maths-section .income-calc .slidecontainer input {
     margin: 0.5rem 0;
     width: 14rem;
   }
+
   .maths-section .income-calc .result {
     margin-bottom: 2rem;
   }
+
   .maths-section .income-calc .result .profiles-result {
     margin-right: 1rem;
   }
+
   .maths-section .income-calc .result .profiles-result h3 {
     width: 5rem;
     height: 5rem;
   }
+
   .maths-section .income-calc .result .profiles-result h3 .value {
     font-size: 1.2rem;
   }
+
   .maths-section .income-calc .result .profiles-result h3 .label {
     font-size: 0.7rem;
   }
+
   .maths-section .income-calc .result .income-result h3 {
     width: 8rem;
     height: 8rem;
   }
+
   .maths-section .income-calc .result .income-result h3 .value {
     font-size: 1.2rem;
   }
+
   .maths-section .income-calc .result .income-result h3 .label {
     font-size: 0.7rem;
   }
+
   .outcomes-section .section-info {
     padding: 1rem;
   }
+
   .outcomes-section .section-info .title {
     font-size: 1.8rem;
   }
+
   .outcomes-section .section-info .helper-txt {
     font-size: 0.8rem;
   }
+
   .outcomes-section .explore-card,
   .outcomes-section .business-card,
   .outcomes-section .corporate-card,
   .outcomes-section .outcomeCard {
     padding: 1rem;
   }
+
   .outcomes-section .explore-card .header-data,
   .outcomes-section .business-card .header-data,
   .outcomes-section .corporate-card .header-data,
   .outcomes-section .outcomeCard .header-data {
     margin-bottom: 1rem;
   }
+
   .outcomes-section .explore-card .header-data .title,
   .outcomes-section .business-card .header-data .title,
   .outcomes-section .corporate-card .header-data .title,
   .outcomes-section .outcomeCard .header-data .title {
     font-size: 1.2rem;
   }
+
   .outcomes-section .explore-card .header-data .plan,
   .outcomes-section .business-card .header-data .plan,
   .outcomes-section .corporate-card .header-data .plan,
   .outcomes-section .outcomeCard .header-data .plan {
     font-size: 2rem;
   }
+
   .outcomes-section .explore-card .header-data .plan-txt,
   .outcomes-section .business-card .header-data .plan-txt,
   .outcomes-section .corporate-card .header-data .plan-txt,
   .outcomes-section .outcomeCard .header-data .plan-txt {
     font-size: 0.9rem;
   }
+
   .outcomes-section .explore-card .card-body .outcome-list li,
   .outcomes-section .business-card .card-body .outcome-list li,
   .outcomes-section .corporate-card .card-body .outcome-list li,
   .outcomes-section .outcomeCard .card-body .outcome-list li {
     margin-bottom: 0.2rem;
   }
+
   .outcomes-section .explore-card .card-body .outcome-list li .fa-check-circle,
   .outcomes-section .business-card .card-body .outcome-list li .fa-check-circle,
   .outcomes-section .corporate-card .card-body .outcome-list li .fa-check-circle,
@@ -985,14 +1322,18 @@ nav .menu-icon:hover {
     font-size: 1.1rem;
     margin-right: 0.2rem;
   }
+
   .outcomes-section .explore-card .card-body .outcome-list li .outcome-type,
   .outcomes-section .business-card .card-body .outcome-list li .outcome-type,
   .outcomes-section .corporate-card .card-body .outcome-list li .outcome-type,
   .outcomes-section .outcomeCard .card-body .outcome-list li .outcome-type {
     font-size: 0.9rem;
   }
+
   .outcomes-section .explore-card,
   .outcomes-section .business-card {
     padding-bottom: 0;
   }
-}/*# sourceMappingURL=pricingPlans.css.map */
+}
+
+/*# sourceMappingURL=pricingPlans.css.map */
