--- a/app-assets/hired/style.scss
+++ b/app-assets/hired/style.scss
@@ -162,7 +162,7 @@
         }
 
         .profile,
-        .myAccount {
+        .exploreCompanies {
           padding: 0;
         }
 
@@ -189,10 +189,10 @@
         }
 
         .profile-dropdown,
-        .myAcc-dropdown {
+        .exCom-dropdown {
 
           .profile-dropdown-toggle,
-          .myAcc-dropdown-toggle {
+          .exCom-dropdown-toggle {
             width: 100%;
             background: transparent;
             padding: 1rem 0;
