personal assessment( july 10th 15th 16th)

--- a/app-assets/hired/style.css
+++ b/app-assets/hired/style.css
@@ -1261,7 +1261,7 @@ label {
 }
 
 .stepper-container .personality-assessment:after {
-  content: "Personality\a Assessment";
+  content: "";
   position: absolute;
   top: 1.5rem;
   left: 59%;
