--- a/app-assets/hired/style.css
+++ b/app-assets/hired/style.css
@@ -1858,7 +1858,7 @@ label {
 }
 
 .get-hired-section .dashboard .competency-data .content {
-  background-color: #595959;
+  /* background-color: #595959; */
   padding: 2rem;
 }
 
